[package]
name = "telegram-gpt"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
openai-flows = "0.9.1"
tg-flows = "0.3"
store-flows = "0.3.2"
serde_json = "1.0.117"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.6"
log = "0.4"
tokio_wasi = { version = "1.25.2", features = ["macros", "rt"] }
anyhow = "1"
